--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -76,7 +76,9 @@
     "C_Cpp.clang_format_fallbackStyle": "Google",
     "C_Cpp.clang_format_style": "Google",
     "cSpell.words": [
+        "aggr",
         "bptr",
+        "pfct",
         "xforg"
     ]
 }
