--- a/C++ProjectManager/CMake Tutorial/Step2/CMakeLists.txt
+++ b/C++ProjectManager/CMake Tutorial/Step2/CMakeLists.txt
@@ -13,6 +13,7 @@ option(USE_MYMATH "Use tutorial provided math implementation" ON)
 configure_file(TutorialConfig.h.in TutorialConfig.h)
 
 if(USE_MYMATH)
+  #add the MathFunctions library
   add_subdirectory(MathFunctions)
   list(APPEND EXTRA_LIBS MathFunctions)
   list(APPEND EXTRA_INCLUDES "${PROJECT_SOURCE_DIR}/MathFunctions")
@@ -21,13 +22,13 @@ endif()
 # add the executable
 add_executable(Tutorial tutorial.cpp)
 
-target_link_libraries(Tutorial PUBLIC ${EXTRA_LIBS})
-
 # add the binary tree to the search path for include files
 # so that we will find TutorialConfig.h
 target_include_directories(Tutorial PUBLIC
                           "${PROJECT_BINARY_DIR}"
                            ${EXTRA_INCLUDES}
-                          )
-                           
+                          )                       
+
+target_link_libraries(Tutorial PUBLIC ${EXTRA_LIBS})
+
 message(STATUS "PROJECT_BINARY_DIR is ${PROJECT_BINARY_DIR}")
