--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -79,6 +79,8 @@
     "cSpell.words": [
         "aggr",
         "bptr",
+        "myfunc",
+        "mylib",
         "pfct",
         "xforg"
     ]
