--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -82,6 +82,8 @@
         "aggr",
         "bnum",
         "bptr",
+        "crbegin",
+        "crend",
         "custmap",
         "custset",
         "myfunc",
