--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -86,6 +86,7 @@
         "crend",
         "custmap",
         "custset",
+        "fopow",
         "myfunc",
         "mylib",
         "nocase",
