--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -86,11 +86,13 @@
         "crend",
         "custmap",
         "custset",
+        "fibl",
         "fopow",
         "iofile",
         "myfunc",
         "mylib",
         "nocase",
+        "Pell",
         "pfct",
         "rpos",
         "sval",
