--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -86,8 +86,10 @@
         "crend",
         "custmap",
         "custset",
+        "Exupéry",
         "fibl",
         "fopow",
+        "inorder",
         "iofile",
         "myfunc",
         "mylib",
