--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -91,13 +91,19 @@
         "fopow",
         "inorder",
         "iofile",
+        "Lippman",
+        "ltpi",
+        "ltps",
         "myfunc",
         "mylib",
         "nocase",
+        "nonstatic",
+        "peleme",
         "Pell",
         "pfct",
         "ptri",
         "rpos",
+        "subobject",
         "sval",
         "svec",
         "Unord",
