--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -80,6 +80,7 @@
     "C_Cpp.clang_format_style": "Google",
     "cSpell.words": [
         "aggr",
+        "bashfull",
         "bnum",
         "bptr",
         "crbegin",
@@ -94,6 +95,7 @@
         "Lippman",
         "ltpi",
         "ltps",
+        "memberwise",
         "myfunc",
         "mylib",
         "nocase",
@@ -103,7 +105,9 @@
         "pfct",
         "ptri",
         "rpos",
+        "Schwarz",
         "subobject",
+        "subobjects",
         "sval",
         "svec",
         "Unord",
