--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -92,6 +92,7 @@
         "fopow",
         "inorder",
         "iofile",
+        "jthread",
         "Lippman",
         "ltpi",
         "ltps",
@@ -106,6 +107,7 @@
         "ptri",
         "rpos",
         "Schwarz",
+        "setaffinity",
         "subobject",
         "subobjects",
         "sval",
