--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -90,26 +90,36 @@
         "datademo",
         "demangling",
         "downdemo",
+        "drwxrwxr",
         "Exupéry",
         "fibl",
         "fopow",
         "inorder",
         "iofile",
         "jthread",
+        "killerr",
+        "killout",
+        "killouterr",
         "libfoo",
         "Lippman",
+        "lsoutput",
         "ltpi",
         "ltps",
         "memberwise",
         "myfunc",
         "mylib",
+        "myvar",
+        "nnumber",
         "nocase",
+        "noclobber",
         "nonstatic",
+        "pdksh",
         "peleme",
         "Pell",
         "pfct",
         "ptri",
         "rpos",
+        "rwxrwxr",
         "Schwarz",
         "setaffinity",
         "Shopiro",
@@ -122,6 +132,8 @@
         "unparser",
         "unsynchronized",
         "Usenix",
+        "utilityname",
+        "utilname",
         "vbtl",
         "vdso",
         "xforg"
