--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -81,20 +81,29 @@
     "cSpell.words": [
         "aggr",
         "bashfull",
+        "Binutils",
         "bnum",
         "bptr",
+        "Clibc",
         "crbegin",
         "crend",
+        "crtbegin",
+        "crtend",
+        "crti",
+        "crtn",
         "custmap",
         "custset",
         "datademo",
+        "DCMAKE",
         "demangling",
         "downdemo",
         "drwxrwxr",
         "Exupéry",
         "fibl",
         "fopow",
+        "gnueabihf",
         "inorder",
+        "Inzt",
         "iofile",
         "jthread",
         "killerr",
@@ -113,6 +122,7 @@
         "nocase",
         "noclobber",
         "nonstatic",
+        "objdump",
         "pdksh",
         "peleme",
         "Pell",
@@ -128,6 +138,7 @@
         "subobjects",
         "sval",
         "svec",
+        "SYSROOT",
         "Unord",
         "unparser",
         "unsynchronized",
