--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -80,6 +80,7 @@
     "C_Cpp.clang_format_style": "Google",
     "cSpell.words": [
         "aggr",
+        "aranges",
         "bashfull",
         "Binutils",
         "bnum",
