--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -81,12 +81,16 @@
     "cSpell.words": [
         "aggr",
         "aranges",
+        "auxbase",
         "bashfull",
         "Binutils",
         "bnum",
         "bptr",
+        "bugurl",
         "callq",
+        "ccxvj",
         "Clibc",
+        "combreloc",
         "crbegin",
         "crend",
         "crtbegin",
@@ -100,29 +104,51 @@
         "demangling",
         "downdemo",
         "drwxrwxr",
+        "dumpbase",
+        "dynstr",
+        "dynsym",
+        "Ehdr",
         "endbr",
         "Exupéry",
+        "fdata",
+        "ffunction",
         "fibl",
+        "findlocale",
         "fleading",
         "fopow",
+        "fresolution",
         "gnueabihf",
+        "helloworld",
+        "iamcu",
         "inorder",
         "Inzt",
         "iofile",
+        "iplt",
         "jthread",
         "killerr",
         "killout",
         "killouterr",
+        "lbss",
+        "ldata",
         "ldqnx",
+        "ldscripts",
         "leaveq",
         "lgcc",
         "libfoo",
+        "liblto",
+        "linkonce",
         "Lippman",
+        "loadarchive",
+        "loadlocale",
         "lpthread",
+        "lrodata",
         "lsoutput",
         "ltpi",
         "ltps",
+        "MAXPAGESIZE",
         "memberwise",
+        "MPFR",
+        "mtune",
         "myfunc",
         "mylib",
         "myvar",
@@ -130,7 +156,10 @@
         "NOBITS",
         "nocase",
         "noclobber",
+        "nocommon",
+        "nomain",
         "nonstatic",
+        "nvptx",
         "objdump",
         "pdksh",
         "peleme",
@@ -141,11 +170,13 @@
         "ptri",
         "rcrt",
         "readelf",
+        "relro",
         "retq",
         "rodata",
         "rpos",
         "rwxrwxr",
         "Schwarz",
+        "Scrt",
         "setaffinity",
         "Shopiro",
         "shstrtab",
@@ -154,7 +185,10 @@
         "subobjects",
         "sval",
         "svec",
+        "sysdep",
         "SYSROOT",
+        "tbss",
+        "tinytext",
         "Unord",
         "unparser",
         "unsynchronized",
