--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -80,15 +80,21 @@
     "C_Cpp.clang_format_style": "Google",
     "cSpell.words": [
         "aggr",
+        "anybuf",
         "aranges",
+        "ARRAYSZ",
         "auxbase",
+        "auxv",
         "bashfull",
+        "beginthread",
+        "Binfmt",
         "Binutils",
         "bnum",
         "bptr",
         "bugurl",
         "callq",
         "ccxvj",
+        "charbuf",
         "Clibc",
         "combreloc",
         "crbegin",
@@ -102,6 +108,7 @@
         "datademo",
         "DCMAKE",
         "demangling",
+        "dosretval",
         "downdemo",
         "drwxrwxr",
         "dumpbase",
@@ -111,43 +118,67 @@
         "endbr",
         "Exupéry",
         "fdata",
+        "FDEV",
         "ffunction",
         "fibl",
+        "filbuf",
         "findlocale",
         "fleading",
+        "fomit",
         "fopow",
+        "fpic",
+        "FPIPE",
         "fresolution",
+        "getconf",
         "gnueabihf",
+        "GOTPCRELX",
         "helloworld",
         "iamcu",
+        "ibgcc",
         "inorder",
         "Inzt",
+        "iobuf",
+        "IOEOF",
         "iofile",
+        "IOMYBUF",
+        "IOYOURBUF",
         "iplt",
+        "JMPREL",
         "jthread",
         "killerr",
         "killout",
         "killouterr",
+        "lastarg",
         "lbss",
         "ldata",
         "ldqnx",
         "ldscripts",
         "leaveq",
         "lgcc",
+        "liba",
         "libfoo",
         "liblto",
         "linkonce",
         "Lippman",
         "loadarchive",
         "loadlocale",
+        "lpbuffer",
+        "LPDWORD",
+        "LPOVERLAPPED",
         "lpthread",
+        "LPWORD",
         "lrodata",
         "lsoutput",
         "ltpi",
         "ltps",
+        "manchine",
         "MAXPAGESIZE",
         "memberwise",
+        "memsz",
+        "minibash",
+        "minicrt",
         "MPFR",
+        "MSVCRT",
         "mtune",
         "myfunc",
         "mylib",
@@ -158,22 +189,38 @@
         "noclobber",
         "nocommon",
         "nomain",
+        "nonstartfiles",
         "nonstatic",
+        "nostartfile",
+        "nostdlib",
         "nvptx",
         "objdump",
+        "OSCHECK",
+        "osfhnd",
         "pdksh",
+        "peekchr",
         "peleme",
         "Pell",
         "pfct",
+        "PHENT",
+        "PHNUM",
+        "pipech",
+        "PLTGOT",
+        "PLTREL",
+        "PLTRELSZ",
         "PROGBITS",
         "propert",
         "ptri",
         "rcrt",
         "readelf",
+        "RELACOUNT",
+        "RELAENT",
+        "RELASZ",
         "relro",
         "retq",
         "rodata",
         "rpos",
+        "runso",
         "rwxrwxr",
         "Schwarz",
         "Scrt",
@@ -181,14 +228,21 @@
         "Shopiro",
         "shstrtab",
         "Stallman",
+        "stapsdt",
+        "streambufsize",
+        "STRSZ",
+        "subfreeres",
         "subobject",
         "subobjects",
         "sval",
         "svec",
+        "SYMENT",
         "sysdep",
         "SYSROOT",
         "tbss",
+        "TEXTREL",
         "tinytext",
+        "tmpfname",
         "Unord",
         "unparser",
         "unsynchronized",
@@ -197,6 +251,12 @@
         "utilname",
         "vbtl",
         "vdso",
-        "xforg"
+        "VERNEED",
+        "VERSYM",
+        "vsyscall",
+        "vvar",
+        "xforg",
+        "Xlinker",
+        "xorl"
     ]
 }
