--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -84,8 +84,10 @@
         "aranges",
         "arglist",
         "ARRAYSZ",
+        "atexit",
         "auxbase",
         "auxv",
+        "badsys",
         "bashfull",
         "beginthread",
         "Binfmt",
@@ -109,6 +111,8 @@
         "datademo",
         "DCMAKE",
         "demangling",
+        "dlclose",
+        "dlopen",
         "dosretval",
         "downdemo",
         "drwxrwxr",
@@ -143,8 +147,10 @@
         "IOEOF",
         "iofile",
         "IOMYBUF",
+        "iostream",
         "IOYOURBUF",
         "iplt",
+        "iret",
         "JMPREL",
         "jthread",
         "killerr",
@@ -161,6 +167,7 @@
         "libfoo",
         "liblto",
         "libminicrt",
+        "libpcre",
         "linkonce",
         "Lippman",
         "loadarchive",
@@ -174,7 +181,9 @@
         "lsoutput",
         "ltpi",
         "ltps",
+        "malloc",
         "manchine",
+        "manip",
         "MAXPAGESIZE",
         "memberwise",
         "memsz",
@@ -195,6 +204,7 @@
         "nonstartfiles",
         "nonstatic",
         "nostartfile",
+        "nostdinc",
         "nostdlib",
         "nvptx",
         "objdump",
@@ -223,6 +233,7 @@
         "retq",
         "rodata",
         "rpos",
+        "rtti",
         "runso",
         "rwxrwxr",
         "Schwarz",
@@ -241,6 +252,8 @@
         "svec",
         "SYMENT",
         "sysdep",
+        "sysenter",
+        "sysexit",
         "SYSROOT",
         "tbss",
         "TEXTREL",
