--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -99,7 +99,12 @@
         "ccxvj",
         "charbuf",
         "Clibc",
+        "clientaddr",
+        "clientfd",
+        "clientlen",
+        "clientrio",
         "combreloc",
+        "connfd",
         "crbegin",
         "crend",
         "crtbegin",
@@ -170,6 +175,7 @@
         "libpcre",
         "linkonce",
         "Lippman",
+        "listenfd",
         "loadarchive",
         "loadlocale",
         "lpbuffer",
@@ -184,6 +190,8 @@
         "malloc",
         "manchine",
         "manip",
+        "maxfd",
+        "MAXLINE",
         "MAXPAGESIZE",
         "memberwise",
         "memsz",
@@ -206,6 +214,7 @@
         "nostartfile",
         "nostdinc",
         "nostdlib",
+        "nready",
         "nvptx",
         "objdump",
         "OSCHECK",
@@ -226,11 +235,13 @@
         "ptri",
         "rcrt",
         "readelf",
+        "readinitb",
         "RELACOUNT",
         "RELAENT",
         "RELASZ",
         "relro",
         "retq",
+        "Ritchie",
         "rodata",
         "rpos",
         "rtti",
@@ -241,6 +252,7 @@
         "setaffinity",
         "Shopiro",
         "shstrtab",
+        "socketlen",
         "Stallman",
         "stapsdt",
         "streambufsize",
@@ -265,6 +277,7 @@
         "Usenix",
         "utilityname",
         "utilname",
+        "vargp",
         "vbtl",
         "vdso",
         "VERNEED",
