--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -105,6 +105,7 @@
         "clientrio",
         "combreloc",
         "connfd",
+        "connfdp",
         "crbegin",
         "crend",
         "crtbegin",
@@ -201,6 +202,7 @@
         "MSVCRT",
         "mtune",
         "myfunc",
+        "myid",
         "mylib",
         "myvar",
         "nnumber",
