--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -94,6 +94,7 @@
         "Binutils",
         "bnum",
         "bptr",
+        "bufptr",
         "bugurl",
         "callq",
         "ccxvj",
@@ -144,6 +145,7 @@
         "ggdb",
         "gnueabihf",
         "GOTPCRELX",
+        "gsum",
         "helloworld",
         "iamcu",
         "ibgcc",
@@ -205,6 +207,8 @@
         "myid",
         "mylib",
         "myvar",
+        "nelems",
+        "nextp",
         "nnumber",
         "NOBITS",
         "nocase",
@@ -218,6 +222,7 @@
         "nostdlib",
         "nready",
         "nvptx",
+        "nwritten",
         "objdump",
         "OSCHECK",
         "osfhnd",
@@ -232,12 +237,18 @@
         "PLTGOT",
         "PLTREL",
         "PLTRELSZ",
+        "privatep",
         "PROGBITS",
         "propert",
+        "psum",
         "ptri",
         "rcrt",
+        "readcnt",
         "readelf",
         "readinitb",
+        "readlineb",
+        "readn",
+        "readok",
         "RELACOUNT",
         "RELAENT",
         "RELASZ",
@@ -252,6 +263,7 @@
         "Schwarz",
         "Scrt",
         "setaffinity",
+        "sharedp",
         "Shopiro",
         "shstrtab",
         "socketlen",
@@ -277,6 +289,7 @@
         "unparser",
         "unsynchronized",
         "Usenix",
+        "usrbuf",
         "utilityname",
         "utilname",
         "vargp",
@@ -286,6 +299,7 @@
         "VERSYM",
         "vsyscall",
         "vvar",
+        "writen",
         "xforg",
         "Xlinker",
         "xorl",
