--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -79,6 +79,7 @@
     "C_Cpp.clang_format_fallbackStyle": "Google",
     "C_Cpp.clang_format_style": "Google",
     "cSpell.words": [
+        "addvec",
         "aggr",
         "anybuf",
         "aranges",
@@ -92,10 +93,12 @@
         "beginthread",
         "Binfmt",
         "Binutils",
+        "BLKP",
         "bnum",
         "bptr",
         "bufptr",
         "bugurl",
+        "buildin",
         "callq",
         "ccxvj",
         "charbuf",
@@ -128,6 +131,7 @@
         "dynsym",
         "Ehdr",
         "endbr",
+        "extendsize",
         "Exupéry",
         "fdata",
         "FDEV",
@@ -141,11 +145,13 @@
         "fpic",
         "FPIPE",
         "fresolution",
+        "FTRP",
         "getconf",
         "ggdb",
         "gnueabihf",
         "GOTPCRELX",
         "gsum",
+        "HDRP",
         "helloworld",
         "iamcu",
         "ibgcc",
@@ -176,6 +182,7 @@
         "liblto",
         "libminicrt",
         "libpcre",
+        "libvector",
         "linkonce",
         "Lippman",
         "listenfd",
@@ -193,6 +200,7 @@
         "malloc",
         "manchine",
         "manip",
+        "MAXARGS",
         "maxfd",
         "MAXLINE",
         "MAXPAGESIZE",
@@ -226,6 +234,7 @@
         "objdump",
         "OSCHECK",
         "osfhnd",
+        "parseline",
         "pdksh",
         "peekchr",
         "peleme",
