--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -108,6 +108,7 @@
         "clientlen",
         "clientrio",
         "combreloc",
+        "COMPILETIME",
         "connfd",
         "connfdp",
         "crbegin",
@@ -133,6 +134,7 @@
         "endbr",
         "extendsize",
         "Exupéry",
+        "fcyc",
         "fdata",
         "FDEV",
         "ffunction",
@@ -201,6 +203,7 @@
         "manchine",
         "manip",
         "MAXARGS",
+        "MAXELEMS",
         "maxfd",
         "MAXLINE",
         "MAXPAGESIZE",
@@ -214,6 +217,7 @@
         "myfunc",
         "myid",
         "mylib",
+        "mymalloc",
         "myvar",
         "nelems",
         "nextp",
