--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -214,10 +214,12 @@
         "MPFR",
         "MSVCRT",
         "mtune",
+        "myargs",
         "myfunc",
         "myid",
         "mylib",
         "mymalloc",
+        "mythread",
         "myvar",
         "nelems",
         "nextp",
