--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -74,7 +74,14 @@
         "cinttypes": "cpp",
         "*.in": "cpp",
         "charconv": "cpp",
-        "typeindex": "cpp"
+        "typeindex": "cpp",
+        "barrier": "cpp",
+        "compare": "cpp",
+        "concepts": "cpp",
+        "latch": "cpp",
+        "numbers": "cpp",
+        "semaphore": "cpp",
+        "stop_token": "cpp"
     },
     "C_Cpp.clang_format_fallbackStyle": "Google",
     "C_Cpp.clang_format_style": "Google",
@@ -82,6 +89,7 @@
         "addvec",
         "aggr",
         "anybuf",
+        "apport",
         "aranges",
         "arglist",
         "ARRAYSZ",
@@ -281,6 +289,7 @@
         "sharedp",
         "Shopiro",
         "shstrtab",
+        "SIGILL",
         "socketlen",
         "Stallman",
         "stapsdt",
